--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -26,3 +26,28 @@ library(lubridate)
 ```
 
 ## Problem 1
+
+### First Step: Cleaning `pols-month.csv`
+
+``` r
+pols <- read_csv("data/data_fivethirtyeight/pols-month.csv")
+```
+
+    ## Rows: 822 Columns: 9
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+pols_clean <- pols %>% 
+  separate(mon, into = c("year", "month", "day"), sep = "-") %>%
+  mutate(
+    month = month.name[as.numeric(month)],
+    president = ifelse(prez_gop == 1, "gap", "dem")
+  ) %>% 
+  select(year, month, everything(), -day, -starts_with("prez"))
+```
