--- a/p8105_hw2_ay2600.Rmd
+++ b/p8105_hw2_ay2600.Rmd
@@ -23,11 +23,27 @@ library(lubridate)
 ```{r clean_538_pols}
 pols <- read_csv("data/data_fivethirtyeight/pols-month.csv") #import the `pols-month.csv` file
 pols_clean <- pols %>% 
-  separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day
+  separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day using "="
   mutate(
     month = month.name[as.numeric(month)], # converts numeric month values to full month names
     president = ifelse(prez_gop == 1, "gop", "dem") # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
   ) %>% 
-  select(everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
+  select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
+```
+
+
+
+### Second Step: Cleaning `snp.csv`
+```{r clean_538_snp}
+snp <- read_csv("data/data_fivethirtyeight/snp.csv") #import the `snp.csv` file
+snp_clean <- snp %>% 
+  separate(date, into = c("month", "day", "year"), sep = "/") %>% # split the data column into three columns: month, day, year using "/"
+  mutate(
+    month = month.name[as.numeric(month)], 
+    year = as.numeric(year),
+    year = ifelse(year < 50, year + 2000, year + 1900) # add 2000 to years value less than 50, 1900 to years value greater or equal to 50
+  ) %>% #converts numeric month to full month names
+select(year, month, close, -day) # rearrange the columns so "year" and "month" at first, then "close". Remove "day"
+
 ```
 
