--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -30,7 +30,14 @@ library(lubridate)
 ### First Step: Cleaning `pols-month.csv`
 
 ``` r
-pols <- read_csv("data/data_fivethirtyeight/pols-month.csv") #import the `pols-month.csv` file
+pols = 
+  read_csv("data/data_fivethirtyeight/pols-month.csv") %>% #import the `pols-month.csv` file
+  separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day using "="
+  mutate(
+    month = month.name[as.numeric(month)], # converts numeric month values to full month names
+    president = ifelse(prez_gop == 1, "gop", "dem") # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
+  ) %>% 
+  select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
 ```
 
     ## Rows: 822 Columns: 9
@@ -42,20 +49,18 @@ pols <- read_csv("data/data_fivethirtyeight/pols-month.csv") #import the `pols-m
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-``` r
-pols_clean <- pols %>% 
-  separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day using "="
-  mutate(
-    month = month.name[as.numeric(month)], # converts numeric month values to full month names
-    president = ifelse(prez_gop == 1, "gop", "dem") # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
-  ) %>% 
-  select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
-```
-
 ### Second Step: Cleaning `snp.csv`
 
 ``` r
-snp <- read_csv("data/data_fivethirtyeight/snp.csv") #import the `snp.csv` file
+snp = 
+  read_csv("data/data_fivethirtyeight/snp.csv") %>% #import the `snp.csv` file
+  separate(date, into = c("month", "day", "year"), sep = "/") %>% # split the data column into three columns: month, day, year using "/"
+  mutate(
+    month = month.name[as.numeric(month)], 
+    year = as.numeric(year),
+    year = ifelse(year < 50, year + 2000, year + 1900) # add 2000 to years value less than 50, 1900 to years value greater or equal to 50
+  ) %>% #converts numeric month to full month names
+select(year, month, close, -day) # rearrange the columns so "year" and "month" at first, then "close". Remove "day"
 ```
 
     ## Rows: 787 Columns: 2
@@ -67,13 +72,26 @@ snp <- read_csv("data/data_fivethirtyeight/snp.csv") #import the `snp.csv` file
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
+### Third Step: Tidy `umeployment.csv`
+
 ``` r
-snp_clean <- snp %>% 
-  separate(date, into = c("month", "day", "year"), sep = "/") %>% # split the data column into three columns: month, day, year using "/"
-  mutate(
-    month = month.name[as.numeric(month)], 
-    year = as.numeric(year),
-    year = ifelse(year < 50, year + 2000, year + 1900) # add 2000 to years value less than 50, 1900 to years value greater or equal to 50
-  ) %>% #converts numeric month to full month names
-select(year, month, close, -day) # rearrange the columns so "year" and "month" at first, then "close". Remove "day"
+umeployment = 
+  read_csv("data/data_fivethirtyeight/unemployment.csv") %>%  #import the `unemployment.csv`
+  rename(year = Year) %>% # rename 'Year' column to 'year'
+  pivot_longer(
+    Jan:Dec, # convert from wide to long
+    names_to = "month", # names of the columns into a new column named 'month'
+    values_to = "unemployment_rate"# values of the columns into a new column named 'unemployment_rate'
+    ) %>% 
+  mutate(month = month.name[match(month, month.abb)]) %>% # finds the position of each month abbreviation name in month.abb vector then concert these month abbreviation names to full month names
+
+select(year, month, unemployment_rate) # select 'year' and 'month' to show first and then 'unemployment_rate'
 ```
+
+    ## Rows: 68 Columns: 13
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
