Last step merging all three datasets and adjust the year to numeric year

--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -35,7 +35,8 @@ pols =
   separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day using "="
   mutate(
     month = month.name[as.numeric(month)], # converts numeric month values to full month names
-    president = ifelse(prez_gop == 1, "gop", "dem") # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
+    president = ifelse(prez_gop == 1, "gop", "dem"), # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
+    year = as.numeric(year)
   ) %>% 
   select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
 ```
@@ -75,7 +76,7 @@ snp =
 ### Third Step: Tidy `umeployment.csv`
 
 ``` r
-umeployment = 
+unemployment = 
   read_csv("data/data_fivethirtyeight/unemployment.csv") %>%  #import the `unemployment.csv`
   rename(year = Year) %>% # rename 'Year' column to 'year'
   pivot_longer(
@@ -83,7 +84,10 @@ umeployment =
     names_to = "month", # names of the columns into a new column named 'month'
     values_to = "unemployment_rate"# values of the columns into a new column named 'unemployment_rate'
     ) %>% 
-  mutate(month = month.name[match(month, month.abb)]) %>% # finds the position of each month abbreviation name in month.abb vector then concert these month abbreviation names to full month names
+  mutate(
+    month = month.name[match(month, month.abb)],
+    year = as.numeric(year)
+    ) %>% # finds the position of each month abbreviation name in month.abb vector then concert these month abbreviation names to full month names
   select(year, month, unemployment_rate) 
 ```
 
@@ -94,3 +98,14 @@ umeployment =
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### Last Step: Merge three datasets
+
+``` r
+data_538 =
+  left_join(pols, snp) %>% 
+  left_join(unemployment)
+```
+
+    ## Joining with `by = join_by(year, month)`
+    ## Joining with `by = join_by(year, month)`
