--- a/p8105_hw2_ay2600.Rmd
+++ b/p8105_hw2_ay2600.Rmd
@@ -26,7 +26,8 @@ pols =
   separate(mon, into = c("year", "month", "day"), sep = "-") %>% # split the mon column into three columns: year, month, day using "="
   mutate(
     month = month.name[as.numeric(month)], # converts numeric month values to full month names
-    president = ifelse(prez_gop == 1, "gop", "dem") # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
+    president = ifelse(prez_gop == 1, "gop", "dem"), # creates a new variable president, assign 'gop' if prez_gop = 1, otherwise assign 'dem'
+    year = as.numeric(year)
   ) %>% 
   select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
 ```
@@ -51,7 +52,7 @@ snp =
 
 ### Third Step: Tidy `umeployment.csv`
 ```{r clean_538_unemployment}
-umeployment = 
+unemployment = 
   read_csv("data/data_fivethirtyeight/unemployment.csv") %>%  #import the `unemployment.csv`
   rename(year = Year) %>% # rename 'Year' column to 'year'
   pivot_longer(
@@ -59,8 +60,21 @@ umeployment =
     names_to = "month", # names of the columns into a new column named 'month'
     values_to = "unemployment_rate"# values of the columns into a new column named 'unemployment_rate'
     ) %>% 
-  mutate(month = month.name[match(month, month.abb)]) %>% # finds the position of each month abbreviation name in month.abb vector then concert these month abbreviation names to full month names
+  mutate(
+    month = month.name[match(month, month.abb)],
+    year = as.numeric(year)
+    ) %>% # finds the position of each month abbreviation name in month.abb vector then concert these month abbreviation names to full month names
   select(year, month, unemployment_rate) 
 
+```
+
+
+### Last Step: Merge three datasets
+
+
+```{r merge_538}
+data_538 =
+  left_join(pols, snp) %>% 
+  left_join(unemployment)
 ```
 
