--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -22,7 +22,18 @@ library(tidyverse)
 
 ``` r
 library(readxl)
-library(lubridate)
+library(janitor)
+```
+
+    ## 
+    ## Attaching package: 'janitor'
+    ## 
+    ## The following objects are masked from 'package:stats':
+    ## 
+    ##     chisq.test, fisher.test
+
+``` r
+library(dplyr)
 ```
 
 ## Problem 1
@@ -109,3 +120,25 @@ data_538 =
 
     ## Joining with `by = join_by(year, month)`
     ## Joining with `by = join_by(year, month)`
+
+## Problem 2
+
+### Clean Mr.Trash Wheel
+
+``` r
+mr_trash_wheel =
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1, range = "A2:N586") %>% 
+  janitor::clean_names() %>% 
+  filter(!is.na(dumpster)) %>% 
+  mutate(
+    homes_powered = (homes_powered * 500) / 30
+  )
+```
+
+### Clean Professor. Trash Wheel
+
+``` r
+prof_trash_wheel =
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2, range = "A2:M108") %>% 
+  janitor::clean_names()
+```
