cleaned prof_trash_wheel

--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -131,7 +131,7 @@ mr_trash_wheel =
   janitor::clean_names() %>% 
   filter(!is.na(dumpster)) %>% 
   mutate(
-    homes_powered = (homes_powered * 500) / 30
+    homes_powered = (weight_tons * 500) / 30
   )
 ```
 
@@ -140,5 +140,11 @@ mr_trash_wheel =
 ``` r
 prof_trash_wheel =
   read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2, range = "A2:M108") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  filter(!is.na(dumpster)) %>% 
+  mutate(
+    homes_powered = (weight_tons * 500) / 30
+  )
 ```
+
+### Clean Gwynnda Trash Wheel
