Complete data cleaning and combine mr trash wheel, prof trash wheel and  gwy trash wheel

--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -127,24 +127,52 @@ data_538 =
 
 ``` r
 mr_trash_wheel =
-  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1, range = "A2:N586") %>% 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1) %>% 
   janitor::clean_names() %>% 
-  filter(!is.na(dumpster)) %>% 
+  drop_na(dumpster) %>% 
+  select(-x15,-x16) %>% 
   mutate(
-    homes_powered = (weight_tons * 500) / 30
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Mr. Trash Wheel",
+    year = as.numeric(year)
   )
 ```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
 
 ### Clean Professor. Trash Wheel
 
 ``` r
 prof_trash_wheel =
-  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2, range = "A2:M108") %>% 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2) %>% 
   janitor::clean_names() %>% 
-  filter(!is.na(dumpster)) %>% 
+  drop_na(dumpster) %>% 
   mutate(
-    homes_powered = (weight_tons * 500) / 30
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Professor Trash Wheel",
+    year = as.numeric(year)
   )
 ```
 
 ### Clean Gwynnda Trash Wheel
+
+``` r
+gwy_trash_wheel = 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 4) %>% 
+  janitor::clean_names() %>% 
+  drop_na(dumpster) %>% 
+  mutate(
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Gwynnda Trash Wheel",
+    year = as.numeric(year)
+  )
+```
+
+### Combine all `mr_trash_wheel`, `prof_trash_wheel`, and \`gwy_trash_wheel
+
+``` r
+trash_wheel_combine = 
+  bind_rows(mr_trash_wheel, prof_trash_wheel, gwy_trash_wheel)
+```
