--- a/p8105_hw2_ay2600.Rmd
+++ b/p8105_hw2_ay2600.Rmd
@@ -87,11 +87,14 @@ data_538 =
 ```{r clean_mr_trash_wheel}
 
 mr_trash_wheel =
-  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1, range = "A2:N586") %>% 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1) %>% 
   janitor::clean_names() %>% 
-  filter(!is.na(dumpster)) %>% 
+  drop_na(dumpster) %>% 
+  select(-x15,-x16) %>% 
   mutate(
-    homes_powered = (weight_tons * 500) / 30
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Mr. Trash Wheel",
+    year = as.numeric(year)
   )
 
 ```
@@ -100,11 +103,13 @@ mr_trash_wheel =
 
 ```{r clean_professor_trash_wheel}
 prof_trash_wheel =
-  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2, range = "A2:M108") %>% 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx",sheet = 2) %>% 
   janitor::clean_names() %>% 
-  filter(!is.na(dumpster)) %>% 
+  drop_na(dumpster) %>% 
   mutate(
-    homes_powered = (weight_tons * 500) / 30
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Professor Trash Wheel",
+    year = as.numeric(year)
   )
   
   
@@ -113,5 +118,25 @@ prof_trash_wheel =
 ### Clean Gwynnda Trash Wheel
 
 
+```{r clean_gwynnda_trash_wheel}
+gwy_trash_wheel = 
+  read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 4) %>% 
+  janitor::clean_names() %>% 
+  drop_na(dumpster) %>% 
+  mutate(
+    homes_powered = (weight_tons * 500) / 30,
+    wheel_name = "Gwynnda Trash Wheel",
+    year = as.numeric(year)
+  )
 
+```
+
+
+### Combine all `mr_trash_wheel`, `prof_trash_wheel`, and `gwy_trash_wheel
+
+```{r merge_trash_wheel_combine}
+trash_wheel_combine = 
+  bind_rows(mr_trash_wheel, prof_trash_wheel, gwy_trash_wheel)
+
+```
 
