description of mci_baseline and mci_baseline_full version

--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -176,3 +176,52 @@ gwy_trash_wheel =
 trash_wheel_combine = 
   bind_rows(mr_trash_wheel, prof_trash_wheel, gwy_trash_wheel)
 ```
+
+## Problem 3
+
+``` r
+mci_baseline = 
+  read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
+  janitor::clean_names() %>%
+  drop_na(age_at_onset) %>% 
+  mutate(
+    sex = ifelse(sex == 1, "Male", "Female"),
+    apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
+    age_at_onset = as.numeric(age_at_onset)
+  )
+```
+
+    ## Rows: 483 Columns: 6
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (6): ID, Current Age, Sex, Education, apoe4, Age at onset
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### Below is the full version of mci_baseline regardless of mci or not for the description use
+
+``` r
+mci_baseline_full = 
+  read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
+  janitor::clean_names() %>%
+  mutate(
+    sex = ifelse(sex == 1, "Male", "Female"),
+    apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
+    age_at_onset = as.numeric(age_at_onset)
+  )
+```
+
+    ## Rows: 483 Columns: 6
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (6): ID, Current Age, Sex, Education, apoe4, Age at onset
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### Description of `mci_baseline`
+
+There are a total of 483 participants were recruited for the study. Of
+these participants, 97 participants developed MCI. The average baseline
+age is 65.05. Among the women in the study, 29.86% are APOE4 carriers.
