--- a/p8105_hw2_ay2600.Rmd
+++ b/p8105_hw2_ay2600.Rmd
@@ -140,3 +140,41 @@ trash_wheel_combine =
 
 ```
 
+## Problem 3
+
+```{r}
+mci_baseline = 
+  read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
+  janitor::clean_names() %>%
+  drop_na(age_at_onset) %>% 
+  mutate(
+    sex = ifelse(sex == 1, "Male", "Female"),
+    apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
+    age_at_onset = as.numeric(age_at_onset)
+  )
+```
+
+### Below is the full version of mci_baseline regardless of mci or not for the description use
+
+```{r}
+mci_baseline_full = 
+  read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
+  janitor::clean_names() %>%
+  mutate(
+    sex = ifelse(sex == 1, "Male", "Female"),
+    apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
+    age_at_onset = as.numeric(age_at_onset)
+  )
+```
+
+
+### Description of `mci_baseline`
+
+There are a total of `r nrow(mci_baseline_full)` participants were recruited for the study. Of these participants, `r nrow(mci_baseline)` participants developed MCI. The average baseline age is `r round(mean(mci_baseline_full$current_age),2)`. Among the women in the study, `r round(mean(mci_baseline_full$apoe4[mci_baseline_full$sex == 'Female'] == 'Carrier') * 100, 2)`% are APOE4 carriers.
+
+
+
+
+
+
+
