--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -7,32 +7,8 @@ Hingling Yu
 
 ``` r
 library(tidyverse)
-```
-
-    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-    ## ✔ dplyr     1.1.3     ✔ readr     2.1.4
-    ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
-    ## ✔ ggplot2   3.4.3     ✔ tibble    3.2.1
-    ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
-    ## ✔ purrr     1.0.2     
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
-
-``` r
 library(readxl)
 library(janitor)
-```
-
-    ## 
-    ## Attaching package: 'janitor'
-    ## 
-    ## The following objects are masked from 'package:stats':
-    ## 
-    ##     chisq.test, fisher.test
-
-``` r
 library(dplyr)
 ```
 
@@ -52,15 +28,6 @@ pols =
   select(year, month, everything(), -day, -starts_with("prez")) # select all variables except 'day' and everything starts with 'prez'
 ```
 
-    ## Rows: 822 Columns: 9
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
-    ## date (1): mon
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
 ### Second Step: Cleaning `snp.csv`
 
 ``` r
@@ -74,15 +41,6 @@ snp =
   ) %>% #converts numeric month to full month names
   select(year, month, close, -day) # rearrange the columns so "year" and "month" at first, then "close". Remove "day"
 ```
-
-    ## Rows: 787 Columns: 2
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (1): date
-    ## dbl (1): close
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ### Third Step: Tidy `umeployment.csv`
 
@@ -102,30 +60,34 @@ unemployment =
   select(year, month, unemployment_rate) 
 ```
 
-    ## Rows: 68 Columns: 13
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
 ### Last Step: Merge three datasets
 
 ``` r
 data_538 =
   left_join(pols, snp) %>% 
-  left_join(unemployment)
-```
+  left_join(unemployment) 
 
-    ## Joining with `by = join_by(year, month)`
-    ## Joining with `by = join_by(year, month)`
+str(data_538)
+## tibble [822 × 11] (S3: tbl_df/tbl/data.frame)
+##  $ year             : num [1:822] 1947 1947 1947 1947 1947 ...
+##  $ month            : chr [1:822] "January" "February" "March" "April" ...
+##  $ gov_gop          : num [1:822] 23 23 23 23 23 23 23 23 23 23 ...
+##  $ sen_gop          : num [1:822] 51 51 51 51 51 51 51 51 51 51 ...
+##  $ rep_gop          : num [1:822] 253 253 253 253 253 253 253 253 253 253 ...
+##  $ gov_dem          : num [1:822] 23 23 23 23 23 23 23 23 23 23 ...
+##  $ sen_dem          : num [1:822] 45 45 45 45 45 45 45 45 45 45 ...
+##  $ rep_dem          : num [1:822] 198 198 198 198 198 198 198 198 198 198 ...
+##  $ president        : chr [1:822] "dem" "dem" "dem" "dem" ...
+##  $ close            : num [1:822] NA NA NA NA NA NA NA NA NA NA ...
+##  $ unemployment_rate: num [1:822] NA NA NA NA NA NA NA NA NA NA ...
+```
 
 ## Problem 2
 
 ### Clean Mr.Trash Wheel
 
 ``` r
+
 mr_trash_wheel =
   read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1) %>% 
   janitor::clean_names() %>% 
@@ -137,10 +99,6 @@ mr_trash_wheel =
     year = as.numeric(year)
   )
 ```
-
-    ## New names:
-    ## • `` -> `...15`
-    ## • `` -> `...16`
 
 ### Clean Professor. Trash Wheel
 
@@ -154,6 +112,8 @@ prof_trash_wheel =
     wheel_name = "Professor Trash Wheel",
     year = as.numeric(year)
   )
+  
+  
 ```
 
 ### Clean Gwynnda Trash Wheel
@@ -175,9 +135,29 @@ gwy_trash_wheel =
 ``` r
 trash_wheel_combine = 
   bind_rows(mr_trash_wheel, prof_trash_wheel, gwy_trash_wheel)
+
+str(trash_wheel_combine)
+## tibble [845 × 15] (S3: tbl_df/tbl/data.frame)
+##  $ dumpster          : num [1:845] 1 2 3 4 5 6 7 8 9 10 ...
+##  $ month             : chr [1:845] "May" "May" "May" "May" ...
+##  $ year              : num [1:845] 2014 2014 2014 2014 2014 ...
+##  $ date              : POSIXct[1:845], format: "2014-05-16" "2014-05-16" ...
+##  $ weight_tons       : num [1:845] 4.31 2.74 3.45 3.1 4.06 2.71 1.91 3.7 2.52 3.76 ...
+##  $ volume_cubic_yards: num [1:845] 18 13 15 15 18 13 8 16 14 18 ...
+##  $ plastic_bottles   : num [1:845] 1450 1120 2450 2380 980 1430 910 3580 2400 1340 ...
+##  $ polystyrene       : num [1:845] 1820 1030 3100 2730 870 2140 1090 4310 2790 1730 ...
+##  $ cigarette_butts   : num [1:845] 126000 91000 105000 100000 120000 90000 56000 112000 98000 130000 ...
+##  $ glass_bottles     : num [1:845] 72 42 50 52 72 46 32 58 49 75 ...
+##  $ plastic_bags      : num [1:845] 584 496 1080 896 368 ...
+##  $ wrappers          : num [1:845] 1162 874 2032 1971 753 ...
+##  $ sports_balls      : num [1:845] 7.2 5.2 6 6 7.2 5.2 3.2 6.4 5.6 7.2 ...
+##  $ homes_powered     : num [1:845] 71.8 45.7 57.5 51.7 67.7 ...
+##  $ wheel_name        : chr [1:845] "Mr. Trash Wheel" "Mr. Trash Wheel" "Mr. Trash Wheel" "Mr. Trash Wheel" ...
 ```
 
 ## Problem 3
+
+### Clean `mci_baseline`
 
 ``` r
 mci_baseline = 
@@ -191,19 +171,11 @@ mci_baseline =
   )
 ```
 
-    ## Rows: 483 Columns: 6
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl (6): ID, Current Age, Sex, Education, apoe4, Age at onset
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-### Below is the full version of mci_baseline regardless of mci or not for the description use
+### Below is the full version of mci_baseline without drop_na(age_at_onset) for the calculation use
 
 ``` r
 mci_baseline_full = 
-  read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
+  read_csv("data/data_mci/mci_baseline.csv", skip = 1) %>% 
   janitor::clean_names() %>%
   mutate(
     sex = ifelse(sex == 1, "Male", "Female"),
@@ -212,16 +184,46 @@ mci_baseline_full =
   )
 ```
 
-    ## Rows: 483 Columns: 6
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl (6): ID, Current Age, Sex, Education, apoe4, Age at onset
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-### Description of `mci_baseline`
+### important values of`mci_baseline`
 
 There are a total of 483 participants were recruited for the study. Of
 these participants, 97 participants developed MCI. The average baseline
 age is 65.05. Among the women in the study, 29.86% are APOE4 carriers.
+
+## Clean mci_amyloid
+
+``` r
+mci_amyloid = 
+  read_csv("data/data_mci/mci_amyloid.csv", skip = 1, na = ".") %>% 
+  janitor::clean_names() %>% 
+  rename(
+    time_0 = baseline,
+    id = study_id
+  ) %>% 
+  pivot_longer(
+    time_0:time_8,
+    names_to = "time_in_years",
+    values_to = "amyloid_ratio"
+  ) %>% 
+  mutate(
+    amyloid_ratio = as.numeric(amyloid_ratio)
+  )
+```
+
+## Combine both datasets
+
+``` r
+mci_combine = 
+  inner_join(mci_baseline, mci_amyloid, by = "id")
+
+str(mci_combine)
+## tibble [470 × 8] (S3: tbl_df/tbl/data.frame)
+##  $ id           : num [1:470] 3 3 3 3 3 5 5 5 5 5 ...
+##  $ current_age  : num [1:470] 62.5 62.5 62.5 62.5 62.5 66 66 66 66 66 ...
+##  $ sex          : chr [1:470] "Male" "Male" "Male" "Male" ...
+##  $ education    : num [1:470] 16 16 16 16 16 16 16 16 16 16 ...
+##  $ apoe4        : chr [1:470] "Carrier" "Carrier" "Carrier" "Carrier" ...
+##  $ age_at_onset : num [1:470] 66.8 66.8 66.8 66.8 66.8 68.7 68.7 68.7 68.7 68.7 ...
+##  $ time_in_years: chr [1:470] "time_0" "time_2" "time_4" "time_6" ...
+##  $ amyloid_ratio: num [1:470] 0.106 0.109 0.106 NA 0.106 ...
+```
