--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -87,7 +87,6 @@ str(data_538)
 ### Clean Mr.Trash Wheel
 
 ``` r
-
 mr_trash_wheel =
   read_excel("data/data_trashwheel/trash_wheel_collection.xlsx", sheet = 1) %>% 
   janitor::clean_names() %>% 
@@ -99,6 +98,19 @@ mr_trash_wheel =
     year = as.numeric(year)
   )
 ```
+
+We clean the `mr_trash_wheel` data, provides detail records of waste
+collection, capturing various information of waste items collected,
+ranging from years 2014 to 2023. Each entry in the dataset represents a
+unique colelction event, with data on the date of collection, for
+example, like weight of waste `weight_tons`, volume of waste
+`volume_cubic_yards` etc. During the cleaning process, the `janitor` was
+used. Also, removed rows with missing dumpster values. Unnecessary
+columns `x15` and `x16` are dropped. We then calculate homes_powered
+using the formula `(weight_tons * 500) / 30` and add a `wheel_name`
+column with the value “Mr. Trash Wheel” for identification purposes.
+Additionally, the `year` column is converted to numeric values to
+facilitate subsequent analyses.
 
 ### Clean Professor. Trash Wheel
 
@@ -155,40 +167,68 @@ str(trash_wheel_combine)
 ##  $ wheel_name        : chr [1:845] "Mr. Trash Wheel" "Mr. Trash Wheel" "Mr. Trash Wheel" "Mr. Trash Wheel" ...
 ```
 
+## Description of Problem 2
+
+- For the `mr_trash_wheel` dataset, there are 584 observations and 15
+  variables. This data provides detail records of waste collection,
+  capturing various information of waste items collected, ranging from
+  years 2014 to 2023. The key variables includes `dumpster`,
+  `weight_tons`, `homes_powered`.
+
+- For the `prof_trash_wheel` dataset, there are 106 observations and 14
+  variables. This data also provides detail records of waste collection,
+  capturing various information of waste items collected, ranging from
+  years 2017 to 2023. The key variables includes `dumpster`,
+  `weight_tons`, `homes_powered`.
+
+- For the `gwy_trash_wheel` dataset, there are 155 observations and 13
+  variables. This data also provides detail records of waste collection,
+  capturing various information of waste items collected, ranging from
+  years 2021 to 2023. The key variables includes `dumpster`,
+  `weight_tons`, `homes_powered`.
+
+- After cleaned and combined `mr_trash_wheel`, `prof_trash_wheel`, and
+  `gwy_trash_wheel` by `year`, rows with missing dumpster values.
+  Unnecessary columns `x15` and `x16` are dropped. `homes_powered` was
+  calculated using the formula `(weight_tons * 500) / 30` and new
+  variable name `wheel_name` column was created with the value
+  “Mr. Trash Wheel”, “Professor Trash Wheel” and “Gwynnda Trash Wheel”
+  assigned to each dataset respectively for trash wheel identification
+  purposes.
+
+- The total weight collected by Professor Trash Wheel was 216.26 tons
+
+- There were 1.63^{4} number of cigarette butts collected by Gwynnda in
+  July of 2021
+
 ## Problem 3
 
 ### Clean `mci_baseline`
 
 ``` r
-mci_baseline = 
+mci_baseline_full = 
   read_csv("data/data_mci/mci_baseline.csv", skip = 1, na = ".") %>% 
   janitor::clean_names() %>%
-  drop_na(age_at_onset) %>% 
   mutate(
     sex = ifelse(sex == 1, "Male", "Female"),
     apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
     age_at_onset = as.numeric(age_at_onset)
   )
-```
 
-### Below is the full version of mci_baseline without drop_na(age_at_onset) for the calculation use
+# The mci_baseline_full is the complete cleaned data but without dropping the participants who do not have mci
 
-``` r
-mci_baseline_full = 
-  read_csv("data/data_mci/mci_baseline.csv", skip = 1) %>% 
-  janitor::clean_names() %>%
-  mutate(
-    sex = ifelse(sex == 1, "Male", "Female"),
-    apoe4 = ifelse(apoe4 == 1, "Carrier", "Non carrier"),
-    age_at_onset = as.numeric(age_at_onset)
-  )
+mci_baseline = 
+  mci_baseline_full %>% 
+  drop_na(age_at_onset) 
+
+# mci_baseline is the final cleaned version after the participants don't have mci removed from mci_baseline_full
 ```
 
 ### important values of`mci_baseline`
 
 There are a total of 483 participants were recruited for the study. Of
 these participants, 97 participants developed MCI. The average baseline
-age is 65.05. Among the women in the study, 29.86% are APOE4 carriers.
+age is 65.61. Among the women in the study, 65.22% are APOE4 carriers.
 
 ## Clean mci_amyloid
 
@@ -214,16 +254,17 @@ mci_amyloid =
 
 ``` r
 mci_combine = 
-  inner_join(mci_baseline, mci_amyloid, by = "id")
+  inner_join(mci_baseline, mci_amyloid, by = "id") %>% 
+  drop_na()
 
 str(mci_combine)
-## tibble [470 × 8] (S3: tbl_df/tbl/data.frame)
-##  $ id           : num [1:470] 3 3 3 3 3 5 5 5 5 5 ...
-##  $ current_age  : num [1:470] 62.5 62.5 62.5 62.5 62.5 66 66 66 66 66 ...
-##  $ sex          : chr [1:470] "Male" "Male" "Male" "Male" ...
-##  $ education    : num [1:470] 16 16 16 16 16 16 16 16 16 16 ...
-##  $ apoe4        : chr [1:470] "Carrier" "Carrier" "Carrier" "Carrier" ...
-##  $ age_at_onset : num [1:470] 66.8 66.8 66.8 66.8 66.8 68.7 68.7 68.7 68.7 68.7 ...
-##  $ time_in_years: chr [1:470] "time_0" "time_2" "time_4" "time_6" ...
-##  $ amyloid_ratio: num [1:470] 0.106 0.109 0.106 NA 0.106 ...
+## tibble [437 × 8] (S3: tbl_df/tbl/data.frame)
+##  $ id           : num [1:437] 3 3 3 3 5 5 5 5 5 7 ...
+##  $ current_age  : num [1:437] 62.5 62.5 62.5 62.5 66 66 66 66 66 66.5 ...
+##  $ sex          : chr [1:437] "Male" "Male" "Male" "Male" ...
+##  $ education    : num [1:437] 16 16 16 16 16 16 16 16 16 18 ...
+##  $ apoe4        : chr [1:437] "Carrier" "Carrier" "Carrier" "Carrier" ...
+##  $ age_at_onset : num [1:437] 66.8 66.8 66.8 66.8 68.7 68.7 68.7 68.7 68.7 74 ...
+##  $ time_in_years: chr [1:437] "time_0" "time_2" "time_4" "time_8" ...
+##  $ amyloid_ratio: num [1:437] 0.106 0.109 0.106 0.106 0.108 ...
 ```
