--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -224,11 +224,25 @@ mci_baseline =
 # mci_baseline is the final cleaned version after the participants don't have mci removed from mci_baseline_full
 ```
 
-### important values of`mci_baseline`
+### Description and important values of`mci_baseline`
 
-There are a total of 483 participants were recruited for the study. Of
-these participants, 97 participants developed MCI. The average baseline
-age is 65.61. Among the women in the study, 65.22% are APOE4 carriers.
+- In the `mci_baseline_full`, there are 483 observations and 6
+  variables. This data provided information of participants in the
+  study.
+
+- During the cleaning process, `janitor::clean_names()` function was
+  used to standardize the variable names. `mutate` function recode the
+  `sex` variable into `Male` and `Female` categories based on the
+  original numeric coding of 1 and other values. Similarly, the `apoe4`
+  variable is recoded to `Carrier` and `Non carrier` categories. The
+  `age_at_onset` is converted into numeric. Lastly, assigned a new
+  dataset `mci_baseline`, which participants who do not have MCI
+  excluded.
+
+- There are a total of 483 participants were recruited for the study. Of
+  these participants, 97 participants developed MCI. The average
+  baseline age is 65.61. Among the women in the study, 65.22% are APOE4
+  carriers.
 
 ## Clean mci_amyloid
 
@@ -267,4 +281,8 @@ str(mci_combine)
 ##  $ age_at_onset : num [1:437] 66.8 66.8 66.8 66.8 68.7 68.7 68.7 68.7 68.7 74 ...
 ##  $ time_in_years: chr [1:437] "time_0" "time_2" "time_4" "time_8" ...
 ##  $ amyloid_ratio: num [1:437] 0.106 0.109 0.106 0.106 0.108 ...
+```
+
+``` r
+write.csv(mci_combine, "data/mci_combine.csv")
 ```
